--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["ip", "real ip", "client ip", "proxy ip", "loadbalancer ip"],
     "homepage": "https://github.com/yidas/php-client-ip",
     "type": "project",
-    "license": "BSD-3-Clause",
+    "license": "MIT",
     "support": {
         "issues": "https://github.com/yidas/php-client-ip/issues",
         "source": "https://github.com/yidas/php-client-ip"
